# rl-drone

./: .gitattributes  .gitignore  Makefile  README.md  RL Drone.ipynb  [Drone Hover] Soft Actor-Critic (SAC).ipynb  [Drone Racer] Soft Actor-Critic (SAC).ipynb  [Multiple Targets] Soft Actor-Critic (SAC).ipynb  [Random Point] Soft Actor-Critic (SAC).ipynb  pyproject.toml
notebooks/: [Drone Hover] Soft Actor-Critic (SAC).ipynb  [Drone Racer] Soft Actor-Critic (SAC).ipynb  [Multiple Targets] Soft Actor-Critic (SAC).ipynb  [Random Point] Soft Actor-Critic (SAC).ipynb
src/rl_drone/: __init__.py
src/rl_drone/callbacks/: __init__.py  config_save.py  reformat_eval.py  training_plots.py  vec_normalize_save.py  video_record.py
src/rl_drone/envs/: __init__.py  base.py  drone_hover.py  drone_racer.py
src/rl_drone/utils/: __init__.py  curve.py  model_xml.py  paths.py  plotting.py  rewards.py  summary.py  track.py  versioning.py
tests/: test_envs.py  test_rewards.py  test_summary.py  test_track.py  test_versioning.py
